test: add model, dto and service layer tests for ms-equipamiento